# haus-plugins

./: README.md
docs/: spec.md
plugins/hass/: README.md  plugin.yaml  pyproject.toml
plugins/hass/hass/: __init__.py  haus_utils  transformers.py
